# RTS_mapping

./: LICENSE  Nitze_RTS_polygons.ipynb  README.md  Unet3+_V2.ipynb  \notebooks\Data_preprocessing.ipynb  automatic_hp_tuning_Hyperopt.ipynb  export_RSimage_as_Geotiffs.ipynb  generate_cells_for_negativedata_sampling.ipynb  generate_evenly-spaced-samplepoints.ipynb  setup.cfg  setup.py  unet3plus_training.ipynb
data/processed/: RTS_polygons_separatedvaltest.csv  WW_rts_polygon_coords.csv  WW_rts_polygon_coords_v2.csv  WW_rts_polygon_coords_v3.csv  WW_rts_polygon_coords_v4.csv  WW_rts_polygon_coords_v5.csv  WW_rts_polygon_coords_v6_code1.csv  WW_rts_polygon_coords_v6_code3.csv  nitze_poly_gf_edited.csv
data/raw/: RTS_polygons_for_Yili_May_2022.csv  nitze_poly_gf_edited.csv  rts_polygons_for_Yili_Apr_8_2022.csv  rts_polygons_for_Yili_Feb_2022_centroids.csv  rts_polygons_for_Yili_Jan_2022.csv
data/raw/BLH_train_polygons_2018_v6_publish/: BLH_train_polygons_2018_v6.dbf  BLH_train_polygons_2018_v6.shp  BLH_train_polygons_2018_v6.shx
notebooks/: Data_preprocessing.ipynb  Install_package.ipynb  Nitze_RTS_polygons.ipynb  automatic_hp_tuning_Hyperopt.ipynb  eeify_and_host_model.ipynb  generate_prediction(w2w)_data.ipynb  patch_predict_stitch.ipynb  plot_training_log.ipynb  predict_testset.ipynb
src/: dataio.py  test.py
src/models/: inference.py  losses.py  test.py  unetpp.py
src/mrcnn/: config.py  mrcnn.py  parallel_model.py  utils.py
src/prep/: dataio.py  eetool.py  eetools.py  mosaic.py  plot.py  utils.py
