[metadata]
name = rtsmapping
version = 0.0.1
description = Mapping RTS with CNN
author = Yang, Yili
author-email = yyl.eli@gmail.com
license = GPLv3

[options]
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    requests
    importlib; python_version == "2.6"

[options.packages.find]
where = src
